--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Опубликовал <a href="#">Василий Петров</a>
                 13 Июня 2020
             </div>
-            <img src="./images/1news.jpg">
+            <img src="images/1news.jpg">
         </article>
         <article>
             <a href="#">
@@ -30,7 +30,7 @@
                 Опубликовал <a href="#">Петр Иванов</a>
                 2 Июня 2020
             </div>
-            <img src="./images/2news.jfif">
+            <img src="images/2news.jfif">
         </article>
         <article>
             <a href="#">
@@ -40,7 +40,7 @@
                 Опубликовал <a href="#">Игорь Игорев</a>
                 28 Мая 2020
             </div>
-            <img src="./images/3news.jpg">
+            <img src="images/3news.jpg">
         </article>
         <article>
             <a href="#">
@@ -50,7 +50,7 @@
                 Опубликовал <a href="#">Василий Петров</a>
                 15 Мая 2020
             </div>
-            <img src="./images/4news.jpg">
+            <img src="images/4news.jpg">
         </article>
         <article>
             <a href="#">
@@ -60,7 +60,7 @@
                 Опубликовал <a href="#">Петр Васильев</a>
                 20 Июня 2019
             </div>
-            <img src="./images/5news.jpg">
+            <img src="images/5news.jpg">
         </article>
     <footer>
         <div class="links">
